# EEG-Vibes

./: CSV read .ipynb  EEG Stuff.ipynb  EEG from CSV with Note, Timing, and Volume Functions.ipynb  Laser Visual Code .ipynb  Laser Visual from CSV.ipynb  README.md  WebSocketOrderFlowTester.py
EEG-records/: Virtual Stream Test1_INSIGHT2.csv  Virtual Stream Test1_INSIGHT2_143521_2022.04.01T15.45.38.04.00.bp.csv  Virtual Stream Test1_INSIGHT2_1st_row_delete.csv
midi/: .tool-versions  README.md  note_functions.py  play.py  pyproject.toml  requirements.txt  volume_functions.py
