[tool.poetry]
name = "eegvibes"
version = "0.1.0"
description = ""
authors = ["Max Buck <maxbuckdeveloper@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
websocket-client = "^1.3.3"
python-dispatch = "^0.2.0"
python-rtmidi = "^1.4.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
